--- a/src/app/layout/header/header.css
+++ b/src/app/layout/header/header.css
@@ -142,7 +142,7 @@ img {
    height: 32px;
    display: flex;
    align-items: center;
-   justify-content: center;
+   justify-content: end;
    font-size: 0.875rem;
 }
 
