--- a/src/app/layout/footer/footer.html
+++ b/src/app/layout/footer/footer.html
@@ -1,4 +1,4 @@
-<div class="footer-container">
+<div class="footer-container default-bg-color">
    <div
       class="g-0 default-font row d-flex justify-content-center container-fluid bg-black max-vh text-white border-footer footer-gradient">
       <div class="d-flex justify-content-center align-items-center h-title-footer">
@@ -112,10 +112,9 @@
             </div>
          </div>
       </div>
-
-      <!-- Copyright -->
    </div>
-
+   
+   <!-- Copyright -->
    <div class="w-100 p-3 d-flex justify-content-center align-items-center">
       <div class="footer-custom d-flex justify-content-center align-items-center">
          <p>© 2023-2030 PT. Global Concert Ticket. All Rights Reserved.</p>
